// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Glyph /> renders diagonal fraction 1`] = `
<span
  className="f157ki83"
>
  1/3
</span>
`;

exports[`<Glyph /> renders normal by default 1`] = `
<span
  className="fuqiicj"
>
  Text
</span>
`;

exports[`<Glyph /> renders ordinal suffix 1`] = `
<span
  className="f156y2zn"
>
  1st
</span>
`;

exports[`<Glyph /> renders slashed zero 1`] = `
<span
  className="fzkl3a3"
>
  100
</span>
`;

exports[`<Glyph /> renders stacked fraction 1`] = `
<span
  className="f4q3iq3"
>
  1/3
</span>
`;

exports[`<Glyph /> renders tabular numbers 1`] = `
<span
  className="f12yjfs5"
>
  123.45
</span>
`;
